--- a/src/styles/WorkDetails.module.css
+++ b/src/styles/WorkDetails.module.css
@@ -1,6 +1,5 @@
 .workDetailsContainer {
   height: 100%;
-  overflow-y: auto;
 }
 
 .titleContainer {
